--- a/.github/workflows/scrape_daily.yml
+++ b/.github/workflows/scrape_daily.yml
@@ -23,6 +23,11 @@ jobs:
         python-version: '3.11'
         cache: 'pip'
 
+    - name: Disable IPv6
+      run: |
+        sudo sysctl -w net.ipv6.conf.all.disable_ipv6=1
+        sudo sysctl -w net.ipv6.conf.default.disable_ipv6=1
+
     - name: Install dependencies
       run: |
         pip install -r scraper/requirements.txt
