--- a/.github/workflows/scrape_daily.yml
+++ b/.github/workflows/scrape_daily.yml
@@ -23,10 +23,12 @@ jobs:
         python-version: '3.11'
         cache: 'pip'
 
-    - name: Disable IPv6
+    - name: Force IPv4 for Supabase
       run: |
         sudo sysctl -w net.ipv6.conf.all.disable_ipv6=1
         sudo sysctl -w net.ipv6.conf.default.disable_ipv6=1
+        IPV4=$(getent ahostsv4 db.ngpniiosmxxkryldadna.supabase.co | head -1 | awk '{print $1}')
+        echo "$IPV4 db.ngpniiosmxxkryldadna.supabase.co" | sudo tee -a /etc/hosts
 
     - name: Install dependencies
       run: |
